refactoring [testng]: TestNGUtil
GitOrigin-RevId: c3dcde05ba2ef9940f6a112eb98f08a0d9797765